WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148063
REGRESSION (
r168327
): ImageDocuments with margins zoom to the wrong position when clicked
https://bugs.webkit.org/show_bug.cgi?id=148063
Summary
REGRESSION (r168327): ImageDocuments with margins zoom to the wrong position ...
Tim Horton
Reported
2015-08-15 18:17:57 PDT
REGRESSION (
r168327
): ImageDocuments with margins zoom to the wrong position when clicked
Attachments
Patch
(1.64 KB, patch)
2015-08-15 18:18 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2015-08-15 18:18:32 PDT
Created
attachment 259111
[details]
Patch
Tim Horton
Comment 2
2015-08-15 20:47:36 PDT
http://trac.webkit.org/changeset/188518
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug