REGRESSION (r168327): ImageDocuments with margins zoom to the wrong position when clicked https://bugs.webkit.org/show_bug.cgi?id=148063

Reviewed by Simon Fraser.

No new test because it doesn't seem possible to click on a window.open'd ImageDocument.

* html/ImageDocument.cpp:
(WebCore::ImageEventListener::handleEvent):
Use <img>-relative coordinates, not document-relative coordinates,
because after r168327, the image can be centered.


Canonical link: https://commits.webkit.org/166182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188518 268f45cc-cd09-0410-ab3c-d52691b4dbfc